[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "xability_utils"
version = "0.1.0"
description = "A Python package for processing TSV files and performing NLP analysis."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
matplotlib = "^3.4.0"
nltk = "^3.6.0"
seaborn = "^0.11.1"
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"